chore: added on hover style and fixed layout shift

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -9003,7 +9003,22 @@ tbody {
     padding-right: 4px;   
    }
 
-   
+   &:hover{
+    .tj-user-table-wrapper{
+      padding-right: 0px;
+    }
+    ::-webkit-scrollbar{
+      display: block;
+      width: 4px;
+    }
+    ::-webkit-scrollbar-track{
+      background: var(--base);
+    }
+    ::-webkit-scrollbar-thumb{
+      background: var(--slate7);
+      border-radius: 6px;
+    }
+  }
 }
 
 .workspace-settings-filters {
